# CodingTrain-rs-fvg

./: Cargo.toml
c001_starfield/: Cargo.toml
c001_starfield/src/: main.rs  star.rs
c005_space_invaders/: Cargo.toml
c005_space_invaders/src/: invader.rs  main.rs  ship.rs
helpers/: Cargo.toml
helpers/src/: graphics.rs  math.rs
