[package]
name = "c005_space_invaders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
femtovg = "0.2.8"
glutin = "0.28.0"
helpers = { path = "../helpers" }
imgref = "1.9.1"
itertools = "0.10.3"
png = "0.17.2"
resource = "0.5.0"
rgb = "0.8.30"
winit = "0.26.0"
